# sparkit-mcp

./: .gitignore  Dockerfile  README.md  glama.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
sparkit_mcp/: __init__.py  __main__.py  client.py  server.py
tests/: test_server.py
